--- a/css/main.css
+++ b/css/main.css
@@ -151,6 +151,8 @@ a:link, a:visited, a:hover, a:active {
     padding: 0;
     overflow: hidden;
     background-color: #f8f8f8;
+    position: relative;
+    left: -18px;
 }
 .nav li {
     float: left;
@@ -159,13 +161,13 @@ a:link, a:visited, a:hover, a:active {
     display: inline-block;
     color: gray;
     text-align: center;
-    padding: 12px 5px;
+    padding: 12px 3px;
     text-decoration: none;
 }
 .nav li a:hover:not(.active) {
     color: rgba(0, 0, 0, 0.8);
 }
-.nav .active {
+.nav .home {
     color: black;
 }
 .nav li.my-dropdown {
@@ -210,7 +212,7 @@ a:link, a:visited, a:hover, a:active {
     position: absolute;
 }
 .carousel-inner .desc {
-    padding: 70px;
+    padding: 7px;
     text-align: center;
     opacity: 1;
 }
@@ -406,6 +408,22 @@ img[src$="leaf-256.png"] {
     .carousel-inner .desc {
         padding: 13px;
         font-size: large;
+    }
+    .nav ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #f8f8f8;
+        position: relative;
+        left: 0px;
+    }
+    .nav li a, .dropbtn {
+        display: inline-block;
+        color: gray;
+        text-align: center;
+        padding: 12px 5px;
+        text-decoration: none;
     }
     .footer-logo {
         height: 67%;
